made file size smaller

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p class="text">This site is currently in the works by Genesis. Site is expected to be finised in T-Minus:</p><p id="cntdwn"></p>
   </div>
     
-    <!-- Importing JS -->
+    <!-- Import JS -->
     <script type="text/javascript" src="./assets/js/countdown.js"></script>
 
   </body>
