--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </head>
   <body>
   <div class="content">
-<p class="logo">{G}</p>
-<p class="text">This site is currently in the works by Genesis. Site is expected to be finised in T-Minus:</p><p id="cntdwn"></p>
+<p class="logo"><a class="link" href="https://genesis.tech">{G}</a></p>
+<p class="text">This site is currently in the works by <a class="link" href="https://genesis.tech">Genesis.</a> Site is expected to be completed in T-Minus:</p><p id="cntdwn"></p>
 </div>
     
     <!-- Import JS -->
